# remainroot

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac
src/: .gitignore  Makefile.am  common.h  config-wrap.h  cred.c  cred.h  info.h  init.c  init.h  preload.c  ptrace.c  remainroot.c  shims.h
src/core/: cred.c  cred.h  file.c  fork.c  proc.c  proc.h  syscalls-def.h  syscalls-undef.h
src/libremain/: symbols.c
src/ohmic/: README.md  ohmic.c  ohmic.h
src/preload/: init.c  symbols.c
src/ptrace/: amd64.c  generic-shims.c  generic-shims.h  generic.h  x86_64.c
